{
    "name": "DebugControls",
    "maps": [
        {
            "name": "Default",
            "id": "b752330d-077e-45e2-9566-d6be1f19a9c6",
            "actions": [
                {
                    "name": "ReloadScene",
                    "type": "Button",
                    "id": "19915f8a-cb68-4f1f-a3f9-a13e96db1a85",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleConsole",
                    "type": "Button",
                    "id": "4c8bf49c-ae78-47d5-b4f8-699280a91e00",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "20d6ba2a-8558-4abb-878b-37c7342c00da",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Backspace",
                    "type": "Button",
                    "id": "ec124b3b-828e-41a8-bcbf-28969e549a37",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "4fb7bbd2-a947-43a2-ba11-53b24a557521",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadScene",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "398c6100-05cf-4124-a0c2-e6e4088319a0",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadScene",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "8f468ec5-09c2-4159-a85c-287d0a94303b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadScene",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dd78039e-b7e1-404c-ad0b-f813517f7684",
                    "path": "<Keyboard>/numpadMultiply",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf44ae72-7de9-446f-b6ca-f40e32286e3c",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Backspace",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ef2b0f3-0d8e-44f4-a381-74fac60ac609",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}